--- a/README
+++ b/README
@@ -37,10 +37,10 @@ Platform: CentOs 7 64bit / nodejs / phantomjs / casperjs
 1.14) sudo npm install multer
 
 2) Install Phantomjs:
-2.1) npm install phantomjs
+2.1) npm install -g phantomjs
 
 3) Install Casperjs:
-3.1) npm install casperjs
+3.1) npm install -g casperjs
 
 CONFIG:
 -------
@@ -54,7 +54,7 @@ RUN:
 ----
 0) forever start /var/www/html/advcp/server.js or `cd /var/www/html/advcp; node server.js &` (starts the API)
 using the wrapper (runs all modules in a sequence):
-1) /bin/bash main.sh - main wrapper 
+1) /bin/bash main.sh - main wrapper (post deploy needs to grant main.sh execute perms)
 or
 2) http://{hostname}:8080 - select "Run Bot" from the UI
 
