--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Advertiser Comliance Spider 
-@author: Oren Shepes <oren@advertise.com>
+@author: Oren Shepes <oshepes@gmail.com>
 @since: 2/17/16
 -----------------------------------------
 
